<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="84dp"
        android:layout_height="62dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:alpha="1"
        app:layout_constraintBottom_toTopOf="@+id/nameRegister"
        app:layout_constraintEnd_toStartOf="@+id/emailRegister"
        app:srcCompat="@drawable/logo_virus" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="171dp"
        android:layout_height="157dp"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/logo_virus"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="96dp"
        android:layout_height="88dp"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/logo_virus" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="126dp"
        android:layout_height="120dp"
        android:alpha="0.6"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/logo_virus" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="84dp"
        android:layout_height="62dp"
        android:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/logo_virus" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="126dp"
        android:layout_height="120dp"
        android:layout_marginEnd="19dp"
        android:alpha="0.25"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister"
        app:srcCompat="@drawable/logo_virus" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/blueLogo"
        android:alpha="0.5"
        android:backgroundTint="@color/orangeLogo"
        android:inputType="textPersonName|textEmailSubject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColorHint="@color/blueLogo"
        android:alpha="0.5"
        android:backgroundTint="@color/orangeLogo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/emailRegister"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/blueLogo"
        android:alpha="0.5"
        android:backgroundTint="@color/orangeLogo"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintStart_toStartOf="@+id/nameRegister"
        app:layout_constraintTop_toBottomOf="@+id/nameRegister" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/orangeLogo"
        android:text="@string/register"
        android:textColor="@color/blueLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="120dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:alpha="0.1"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nameRegister"
        app:layout_constraintTop_toTopOf="@+id/emailRegister"
        app:srcCompat="@drawable/logo_virus" />

</androidx.constraintlayout.widget.ConstraintLayout>